# aarohi

./: .gitignore  README.md  docker-compose.yml  pr_body.txt  report.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  main.py  pyproject.toml  token_server.py
backend/config/: logging.py  settings.py
backend/core/: __init__.py  agents.py  auth.py  circuit_breaker.py  context.py  database.py  encryption.py  guardrails.py  instrumented_llm.py  metrics.py  sarvam_tts.py
backend/prompts/: __init__.py  persona.py
backend/tests/: conftest.py  test_auth.py  test_circuit_breaker.py  test_database.py  test_guardrails.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/public/: avatar_core_wasm-e68766db.wasm  avatar_core_wasm.js
frontend/scripts/: copy-wasm.js  wasm-script-dir-loader.cjs
frontend/src/: env.ts  middleware.ts  proxy.ts
frontend/src/app/: actions.ts  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/intake/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/success/: page.tsx
frontend/src/components/: IntakeCard.tsx  ProgressBar.tsx
frontend/src/components/spatialreal-avatar/: index.ts  spatialreal-avatar-canvas.tsx  spatialreal-avatar-context.ts  spatialreal-avatar-error.tsx  spatialreal-avatar-frame.tsx  spatialreal-avatar-loading.tsx  spatialreal-avatar-provider.tsx
frontend/src/hooks/: useSpatialRealAvatar.ts
frontend/src/store/: useIntakeStore.ts
frontend/src/types/: avatarkit-region.d.ts  spatialreal-avatar.ts
